tools/tests/errors/surf_parse_06.ki
# PARSER: an else clause with a body that is not indented
if 1 < 2:
    discard 1
else:
discard 2